--- a/index.html
+++ b/index.html
@@ -7,12 +7,50 @@
         content="IE=edge">
   <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <title>WDD 230 | Web Frontend Development I</title>
+  <meta name="author"
+        content="Barbara Chamberlin">
+  <meta name="description"
+        content="This page is used as a 'Course Portal Home Page' for WDD 230 Web Frontend Development I and will be
+        updated regularly with fall semester assignment links. ">
+  <link rel="stylesheet"
+        href="css/style.css">
+  <script src="js/script.js"></script> <!-- Is this js link correct? -->
+  <link rel="preconnect"
+        href="https://fonts.googleapis.com">
+  <link rel="preconnect"
+        href="https://fonts.gstatic.com"
+        crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-  <h1>Testing</h1>
-  <footer>Hello BYU-I World!</footer>
+  <div class="item grid-container">
+    <header class="item header">
+      <h1>Barbara Chamberlin</h1>
+    </header>
+
+    <figure class="item figure">
+      <img src="images/barbpic1.JPG"
+           alt="Barbara Chamberlin"
+           title="Barbara Chamberlin in her element.">
+    </figure>
+
+    <main class="item main">
+      <h2>WDD 230: Assignment Portal</h2>
+      <ul>
+        <li>Lesson 02:<a href="#">Assignment Link</a></li>
+        <li>Lesson 03:<a href="#">Assignment Link</a></li>
+        <li>Lesson 04:<a href="#">Link</a>|<a href="#">Link</a></li>
+      </ul>
+    </main>
+
+    <footer class="item footer">
+      &copy; | Barbara Chamberlin | Oklahoma | BYU-I Learning
+    </footer>
+  </div>
 </body>
 
 </html>
