--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet"
             href="css/style.css">
       <script defer
-              src="js/script.js"></script> <!-- Is this js link correct? -->
+              src="js/script.js"></script>
       <link rel="preconnect"
             href="https://fonts.googleapis.com">
       <link rel="preconnect"
@@ -43,9 +43,13 @@
                   <h2>WDD 230: Assignment Portal</h2>
                   <hr>
                   <ul>
-                        <li>Lesson 02: <a href="#">Assignment Link</a></li>
-                        <li>Lesson 03: <a href="#">Assignment Link</a></li>
-                        <li>Lesson 04: <a href="#">Link </a> | <a href="#"> Link</a></li>
+                        <li>Lesson 02: <a class="link"
+                                 href="#">Assignment Link</a></li>
+                        <li>Lesson 03: <a class="link"
+                                 href="#">Assignment Link</a></li>
+                        <li>Lesson 04: <a class="link"
+                                 href="#">Link </a> | <a class="link"
+                                 href="#"> Link</a></li>
                   </ul>
             </main>
 
