--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             content="This page is used as a 'Course Portal Home Page' for WDD 230 Web Frontend Development I and will be
         updated regularly with fall semester assignment links. ">
       <link rel="stylesheet"
+            href="css/normalize.css">
+      <link rel="stylesheet"
             href="css/style.css">
       <script defer
               src="js/script.js"></script>
