reman and work lesson 2

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -2,45 +2,84 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible"
-        content="IE=edge">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <title>Design Principles Document</title>
-  <meta name="author"
-        content="Barbara Chamberlin">
-  <meta name="description"
-        content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
-  <link rel="stylesheet"
-        href="css/normalize.css">
-  <link rel="stylesheet"
-        href="css/style.css">
-  <script defer
-          src="js/script.js"></script>
-  <link rel="preconnect"
-        href="https://fonts.googleapis.com">
-  <link rel="preconnect"
-        href="https://fonts.gstatic.com"
-        crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
-        rel="stylesheet">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible"
+            content="IE=edge">
+      <meta name="viewport"
+            content="width=device-width, initial-scale=1.0">
+      <title>Design Principles Document</title>
+      <meta name="author"
+            content="Barbara Chamberlin">
+      <meta name="description"
+            content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
+      <link rel="stylesheet"
+            href="css/normalize.css">
+      <link rel="stylesheet"
+            href="css/style.css">
+      <script defer
+              src="js/script.js"></script>
+      <link rel="preconnect"
+            href="https://fonts.googleapis.com">
+      <link rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto&display=swap"
+            rel="stylesheet">
 
 </head>
 
 <body>
-  <header>
+      <header class="item header">
+            <h1>Design Principles Document</h1>
+            <h2>Barbara Chamberlin</h2>
+      </header>
 
+      <main>
+            <div class="card-grid">
+                  <div class="card1">
+                        <h3>Dominos Pizza</h3>
+                        <a href="https://www.dominos.com/">https://www.dominos.com/</a>
+                        <br>
 
-  </header>
+                        <img src="images/dominos.JPG"
+                             alt="Dominos website iphone responsive image clip"
+                             class="pizza1">
+                        <p>Dominos’ website uses repetition in a threefold approach. At first sight, the bold prices pop
+                              with
+                              white foreground outlined in thick red, then a medium side red “order now” button with
+                              white
+                              lettering, and finally a tiny white title flag that introduces the product. </p>
+                  </div>
 
-  <main>
+                  <div class="card2">
+                        <h3>Little Caesars</h3>
+                        <a href="https://littlecaesars.com/en-us/">https://littlecaesars.com</a>
+                        <br>
+                        <img src="images/littlecaesars.JPG"
+                             alt="Little Caesars website iphone responsive image clip"
+                             class="pizza2">
+                        <p>Little Caesars has visual hierarchy down. This website uses a deep orange background,
+                              their signature color, to draw the eye first to the large black bold price, then to the
+                              white title, and finally to the mouthwatering food picture.</p>
+                  </div>
 
+                  <div class="card3">
+                        <h3>Pizza Hut</h3>
+                        <a href="https://www.pizzahut.com/">https://www.pizzahut.com/</a>
+                        <br>
+                        <img src="images/pizzahut.JPG"
+                             alt="Pizza Hut website iphone responsive image clip"
+                             class="pizza3">
+                        <p>Pizza Hut uses proximity to section content, such as grouping together featured items
+                              versus popular pizza selections.</p>
+                  </div>
+            </div>
 
-  </main>
-  <footer>
-
-  </footer>
+      </main>
+      <footer class="item footer">
+            &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | BYU-I Learning
+            <p>Last Updated: <span id="lastupdated"></span></p>
+      </footer>
 </body>
 
 </html>
