--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>WDD 230 | Web Frontend Development I</title>
+      <title>Barbara Chamberlin | WDD 230 | Web Frontend Development I</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
@@ -32,7 +32,8 @@
 <body>
       <div class="item grid-container">
             <header class="item header">
-                  <h1>Barbara Chamberlin</h1>
+                  <h1>Design Principles Document</h1>
+                  <h2>Barbara Chamberlin</h2>
             </header>
 
             <figure class="item figure">
