--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Barbara Chamberlin | WDD 230 | Web Frontend Development I</title>
+      <title>WDD 230 | Web Frontend Development I | Barbara Chamberlin</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
@@ -29,11 +29,10 @@
 
 </head>
 
-<body>
+<body class="body">
       <div class="item grid-container">
             <header class="item header">
-                  <h1>Design Principles Document</h1>
-                  <h2>Barbara Chamberlin</h2>
+                  <h1>Barbara Chamberlin</h1>
             </header>
 
             <figure class="item figure">
@@ -47,7 +46,7 @@
                   <hr>
                   <ul>
                         <li>Lesson 02: <a class="link"
-                                 href="#">Assignment Link</a></li>
+                                 href="lesson2/design-principles.html">Design Principles Document</a></li>
                         <li>Lesson 03: <a class="link"
                                  href="#">Assignment Link</a></li>
                         <li>Lesson 04: <a class="link"
