--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,17 +7,17 @@
             content="IE=edge">
       <meta name="viewport"
             content="width=device-width, initial-scale=1.0">
-      <title>Design Principles Document</title>
+      <title>Design Principles Document | Barbara Chamberlin</title>
       <meta name="author"
             content="Barbara Chamberlin">
       <meta name="description"
             content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
+      <!-- <link rel="stylesheet"
+            href="../css/normalize.css"> -->
       <link rel="stylesheet"
-            href="css/normalize.css">
-      <link rel="stylesheet"
-            href="css/style.css">
+            href="css-02/style-02.css">
       <script defer
-              src="js/script.js"></script>
+              src="js-02/script-02.js"></script>
       <link rel="preconnect"
             href="https://fonts.googleapis.com">
       <link rel="preconnect"
@@ -28,55 +28,69 @@
 
 </head>
 
-<body>
-      <header class="item header">
-            <h1>Design Principles Document</h1>
-            <h2>Barbara Chamberlin</h2>
+<body class="body">
+      <header class="header">
+            <h1>Design Principles Document
+            </h1>
+
       </header>
 
-      <main>
-            <div class="card-grid">
-                  <div class="card1">
-                        <h3>Dominos Pizza</h3>
-                        <a href="https://www.dominos.com/">https://www.dominos.com/</a>
-                        <br>
+      <main class="main">
+            <div class="grid-container">
+                  <div class="grid-item grid-item-1">
+                        <h2 class="grid-header">Dominos Pizza
+                              <br>
+                              <a class="link"
+                                 href="https://www.dominos.com/">https://www.dominos.com/</a>
+                        </h2>
 
-                        <img src="images/dominos.JPG"
-                             alt="Dominos website iphone responsive image clip"
-                             class="pizza1">
-                        <p>Dominos’ website uses repetition in a threefold approach. At first sight, the bold prices pop
+                        <figure class="figure">
+                              <img src="images-02/dominos.JPG"
+                                   alt="Dominos website iphone responsive image clip"
+                                   class="pizza">
+                        </figure>
+                        <p>Dominos’ website uses <b>repetition</b> in a threefold approach. At first sight, the bold
+                              prices pop
                               with
                               white foreground outlined in thick red, then a medium side red “order now” button with
                               white
                               lettering, and finally a tiny white title flag that introduces the product. </p>
                   </div>
 
-                  <div class="card2">
-                        <h3>Little Caesars</h3>
-                        <a href="https://littlecaesars.com/en-us/">https://littlecaesars.com</a>
-                        <br>
-                        <img src="images/littlecaesars.JPG"
-                             alt="Little Caesars website iphone responsive image clip"
-                             class="pizza2">
-                        <p>Little Caesars has visual hierarchy down. This website uses a deep orange background,
+                  <div class="grid-item grid-item-1">
+                        <h2 class="grid-header">Little Caesars
+                              <br>
+                              <a class="link"
+                                 href="https://littlecaesars.com/en-us/">https://littlecaesars.com</a>
+                        </h2>
+                        <figure class="figure">
+                              <img src="images-02/littlecaesars.JPG"
+                                   alt="Little Caesars website iphone responsive image clip"
+                                   class="pizza">
+                        </figure>
+                        <p>Little Caesars has <b>visual hierarchy</b> down. This website uses a deep orange background,
                               their signature color, to draw the eye first to the large black bold price, then to the
                               white title, and finally to the mouthwatering food picture.</p>
                   </div>
 
-                  <div class="card3">
-                        <h3>Pizza Hut</h3>
-                        <a href="https://www.pizzahut.com/">https://www.pizzahut.com/</a>
-                        <br>
-                        <img src="images/pizzahut.JPG"
-                             alt="Pizza Hut website iphone responsive image clip"
-                             class="pizza3">
-                        <p>Pizza Hut uses proximity to section content, such as grouping together featured items
+                  <div class="grid-item grid-item-1">
+                        <h2 class="grid-header">Pizza Hut
+                              <br>
+                              <a class="link"
+                                 href="https://www.pizzahut.com/">https://www.pizzahut.com/</a>
+                        </h2>
+                        <figure class="figure">
+                              <img src="images-02/pizzahut.JPG"
+                                   alt="Pizza Hut website iphone responsive image clip"
+                                   class="pizza">
+                        </figure>
+                        <p>Pizza Hut uses <b>proximity</b> to section content, such as grouping together featured items
                               versus popular pizza selections.</p>
                   </div>
             </div>
 
       </main>
-      <footer class="item footer">
+      <footer class="footer">
             &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | BYU-I Learning
             <p>Last Updated: <span id="lastupdated"></span></p>
       </footer>
