--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -12,8 +12,8 @@
             content="Barbara Chamberlin">
       <meta name="description"
             content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
-      <!-- <link rel="stylesheet"
-            href="../css/normalize.css"> -->
+      <link rel="stylesheet"
+            href="../css/normalize.css">
       <link rel="stylesheet"
             href="css-02/style-02.css">
       <script defer
