color link tweak take 2

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                   <hr>
                   <ul>
                         <li>Lesson 02: <a class="link"
-                                 href="lesson2/design-principles.html">Design Principles Document</a></li>
+                                 href="lesson2/design-principles.html"><b>Design Principles Document</b></a></li>
                         <li>Lesson 03: <a class="link"
-                                 href="#">Assignment Link</a></li>
+                                 href="#"><b>Assignment Link</b></a></li>
                         <li>Lesson 04: <a class="link"
-                                 href="#">Link </a> | <a class="link"
-                                 href="#"> Link</a></li>
+                                 href="#"><b>Link</b> </a> <b>|</b> <a class="link"
+                                 href="#"> <b>Link</b></a></li></b>
                   </ul>
             </main>
 
