final - cross my fingers wk 2 website

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -32,17 +32,20 @@
       <header class="header">
             <h1>Design Principles Document
             </h1>
+            <h2>Barbara Chamberlin</h2>
 
       </header>
 
       <main class="main">
             <div class="grid-container">
                   <div class="grid-item grid-item-1">
-                        <h2 class="grid-header">Dominos Pizza
-                              <br>
-                              <a class="link"
-                                 href="https://www.dominos.com/">https://www.dominos.com/</a>
+                        <h2 class="grid-header">Repetition
                         </h2>
+                        <section class="section">
+                              <p><b>Dominos Pizza</b></p>
+                              <a class="link"
+                                 href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
+                        </section>
 
                         <figure class="figure">
                               <img src="images-02/dominos.JPG"
@@ -58,11 +61,13 @@
                   </div>
 
                   <div class="grid-item grid-item-1">
-                        <h2 class="grid-header">Little Caesars
-                              <br>
-                              <a class="link"
-                                 href="https://littlecaesars.com/en-us/">https://littlecaesars.com</a>
+                        <h2 class="grid-header">Visual Hierarchy
                         </h2>
+                        <section class="section">
+                              <p><b>Little Caesars</b></p>
+                              <a class="link"
+                                 href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
+                        </section>
                         <figure class="figure">
                               <img src="images-02/littlecaesars.JPG"
                                    alt="Little Caesars website iphone responsive image clip"
@@ -74,11 +79,13 @@
                   </div>
 
                   <div class="grid-item grid-item-1">
-                        <h2 class="grid-header">Pizza Hut
-                              <br>
-                              <a class="link"
-                                 href="https://www.pizzahut.com/">https://www.pizzahut.com/</a>
+                        <h2 class="grid-header">Proximity
                         </h2>
+                        <section class="section">
+                              <p><b>Pizza Hut</b></p>
+                              <a class="link"
+                                 href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
+                        </section>
                         <figure class="figure">
                               <img src="images-02/pizzahut.JPG"
                                    alt="Pizza Hut website iphone responsive image clip"
