change section to h4

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -41,11 +41,11 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Repetition
                         </h3>
-                        <section class="section">
-                              <p><b>Dominos Pizza</b></p>
+                        <h4 class="section">
+                              <p><b>Dominos Pizza </b></p>
                               <a class="link"
                                  href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
-                        </section>
+                        </h4>
 
                         <figure class="figure">
                               <img src="images-02/dominos.JPG"
@@ -63,11 +63,11 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Visual Hierarchy
                         </h3>
-                        <section class="section">
+                        <h4 class="section">
                               <p><b>Little Caesars</b></p>
                               <a class="link"
                                  href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
-                        </section>
+                        </h4>
                         <figure class="figure">
                               <img src="images-02/littlecaesars.JPG"
                                    alt="Little Caesars website iphone responsive image clip"
@@ -81,11 +81,11 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Proximity
                         </h3>
-                        <section class="section">
+                        <h4 class="section">
                               <p><b>Pizza Hut</b></p>
                               <a class="link"
                                  href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
-                        </section>
+                        </h4>
                         <figure class="figure">
                               <img src="images-02/pizzahut.JPG"
                                    alt="Pizza Hut website iphone responsive image clip"
