delete p element from an h4

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -42,7 +42,7 @@
                         <h3 class="grid-header">Repetition
                         </h3>
                         <h4 class="section">
-                              <p><b>Dominos Pizza </b></p>
+                              <b>Dominos Pizza </b>
                               <a class="link"
                                  href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
                         </h4>
@@ -64,7 +64,7 @@
                         <h3 class="grid-header">Visual Hierarchy
                         </h3>
                         <h4 class="section">
-                              <p><b>Little Caesars</b></p>
+                              <b>Little Caesars</b>
                               <a class="link"
                                  href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
                         </h4>
@@ -82,7 +82,7 @@
                         <h3 class="grid-header">Proximity
                         </h3>
                         <h4 class="section">
-                              <p><b>Pizza Hut</b></p>
+                              <b>Pizza Hut</b>
                               <a class="link"
                                  href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
                         </h4>
