correct grid and all small letters

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </header>
 
             <figure class="item figure">
-                  <img src="images/barbpic1.JPG"
+                  <img src="images/barbpic1.jpg"
                        alt="Barbara Chamberlin"
                        title="Barbara Chamberlin in her element.">
             </figure>
