--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -43,12 +43,13 @@
                         </h3>
                         <h4 class="section">
                               <b>Dominos Pizza </b>
+                              <br>
                               <a class="link"
                                  href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
                         </h4>
 
                         <figure class="figure">
-                              <img src="images-02/dominos.JPG"
+                              <img src="images-02/dominos.jpg"
                                    alt="Dominos website iphone responsive image clip"
                                    class="pizza">
                         </figure>
@@ -65,11 +66,12 @@
                         </h3>
                         <h4 class="section">
                               <b>Little Caesars</b>
+                              <br>
                               <a class="link"
                                  href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
                         </h4>
                         <figure class="figure">
-                              <img src="images-02/littlecaesars.JPG"
+                              <img src="images-02/littlecaesars.jpg"
                                    alt="Little Caesars website iphone responsive image clip"
                                    class="pizza">
                         </figure>
@@ -83,11 +85,12 @@
                         </h3>
                         <h4 class="section">
                               <b>Pizza Hut</b>
+                              <br>
                               <a class="link"
                                  href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
                         </h4>
                         <figure class="figure">
-                              <img src="images-02/pizzahut.JPG"
+                              <img src="images-02/pizzahut.jpg"
                                    alt="Pizza Hut website iphone responsive image clip"
                                    class="pizza">
                         </figure>
