--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
             </main>
 
             <footer class="item footer">
-                  &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | BYU-I Learning
+                  &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
+                     href="https://www.byui.edu/online"> BYU-I Learning </a>
                   <p>Last Updated: <span id="lastupdated"></span></p>
             </footer>
       </div>
