--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -41,7 +41,7 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Repetition
                         </h3>
-                        <h4 class="section">
+                        <h4>
                               <b>Dominos Pizza </b>
                               <br>
                               <a class="link"
@@ -64,7 +64,7 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Visual Hierarchy
                         </h3>
-                        <h4 class="section">
+                        <h4>
                               <b>Little Caesars</b>
                               <br>
                               <a class="link"
@@ -83,7 +83,7 @@
                   <div class="grid-item grid-item-1">
                         <h3 class="grid-header">Proximity
                         </h3>
-                        <h4 class="section">
+                        <h4>
                               <b>Pizza Hut</b>
                               <br>
                               <a class="link"
@@ -101,7 +101,8 @@
 
       </main>
       <footer class="footer">
-            &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | BYU-I Learning
+            &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
+               href="https://www.byui.edu/online"> BYU-I Learning </a>
             <p>Last Updated: <span id="lastupdated"></span></p>
       </footer>
 </body>
