--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -12,12 +12,18 @@
             content="Barbara Chamberlin">
       <meta name="description"
             content="This assignment is to observe and document three website that use correct design principles with reflective live sites.">
+      <!-- <link rel="stylesheet"
+             href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">  another way to link normalize.css -->
       <link rel="stylesheet"
             href="../css/normalize.css">
       <link rel="stylesheet"
-            href="css-02/style-02.css">
+            href="css/large.css">
+      <link rel="stylesheet"
+            href="css/medium.css">
+      <link rel="stylesheet"
+            href="css/small.css">
       <script defer
-              src="js-02/script-02.js"></script>
+              src="js/script.js"></script>
       <link rel="preconnect"
             href="https://fonts.googleapis.com">
       <link rel="preconnect"
