--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -55,7 +55,7 @@
                         </h4>
 
                         <figure class="figure">
-                              <img src="images-02/dominos.jpg"
+                              <img src="images/dominos.jpg"
                                    alt="Dominos website iphone responsive image clip"
                                    class="pizza">
                         </figure>
@@ -77,7 +77,7 @@
                                  href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
                         </h4>
                         <figure class="figure">
-                              <img src="images-02/littlecaesars.jpg"
+                              <img src="images/littlecaesars.jpg"
                                    alt="Little Caesars website iphone responsive image clip"
                                    class="pizza">
                         </figure>
@@ -96,7 +96,7 @@
                                  href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
                         </h4>
                         <figure class="figure">
-                              <img src="images-02/pizzahut.jpg"
+                              <img src="images/pizzahut.jpg"
                                    alt="Pizza Hut website iphone responsive image clip"
                                    class="pizza">
                         </figure>
