--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <link rel="stylesheet"
             href="css/normalize.css">
       <link rel="stylesheet"
-            href="css/style.css">
+            href="css/small.css">
+      <link rel="stylesheet"
+            href="css/medium.css">
+      <link rel="stylesheet"
+            href="css/large.css">
       <script defer
               src="js/script.js"></script>
       <link rel="preconnect"
