--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
       <link rel="stylesheet"
             href="css/normalize.css">
       <link rel="stylesheet"
-            href="css/small.css">
-      <link rel="stylesheet"
-            href="css/medium.css">
-      <link rel="stylesheet"
-            href="css/large.css">
+            href="css/style.css">
       <script defer
               src="js/script.js"></script>
       <link rel="preconnect"
@@ -33,19 +29,19 @@
 
 </head>
 
-<body class="body">
-      <div class="item grid-container">
-            <header class="item header">
+<body>
+      <div class="grid-container">
+            <header>
                   <h1>Barbara Chamberlin</h1>
             </header>
 
-            <figure class="item figure">
+            <picture>
                   <img src="images/barbpic1.jpg"
                        alt="Barbara Chamberlin"
                        title="Barbara Chamberlin in her element.">
-            </figure>
+            </picture>
 
-            <main class="item main">
+            <main>
                   <h2>WDD 230: Assignment Portal</h2>
                   <hr>
                   <ul>
@@ -59,7 +55,7 @@
                   </ul>
             </main>
 
-            <footer class="item footer">
+            <footer>
                   &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
                      href="https://www.byui.edu/online"> BYU-I Learning </a>
                   <p>Last Updated: <span id="lastupdated"></span></p>
