--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -22,8 +22,6 @@
             href="css/medium.css">
       <link rel="stylesheet"
             href="css/large.css">
-
-
       <script defer
               src="js/script.js"></script>
       <link rel="preconnect"
@@ -36,31 +34,29 @@
 
 </head>
 
-<body class="body">
-      <header class="header">
+<body>
+      <header>
             <h1>Design Principles Document
             </h1>
             <h2>Barbara Chamberlin</h2>
 
       </header>
 
-      <main class="main">
+      <main>
             <div class="grid-container">
-                  <div class="grid-item grid-item-1">
+                  <div class="grid-item">
                         <h3 class="grid-header">Repetition
                         </h3>
                         <h4>
                               <b>Dominos Pizza </b>
                               <br>
-                              <a class="link"
-                                 href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
+                              <a href="https://www.dominos.com/"><b>https://www.dominos.com/</b></a>
                         </h4>
 
-                        <figure class="figure">
+                        <picture>
                               <img src="images/dominos.jpg"
-                                   alt="Dominos website iphone responsive image clip"
-                                   class="pizza">
-                        </figure>
+                                   alt="Dominos website iphone responsive image clip">
+                        </picture>
                         <p>Dominos’ website uses <b>repetition</b> in a threefold approach. At first sight, the bold
                               prices pop
                               with
@@ -69,46 +65,42 @@
                               lettering, and finally a tiny white title flag that introduces the product. </p>
                   </div>
 
-                  <div class="grid-item grid-item-1">
+                  <div class="grid-item">
                         <h3 class="grid-header">Visual Hierarchy
                         </h3>
                         <h4>
                               <b>Little Caesars</b>
                               <br>
-                              <a class="link"
-                                 href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
+                              <a href="https://littlecaesars.com/en-us/"><b>https://littlecaesars.com</b></a>
                         </h4>
-                        <figure class="figure">
+                        <picture>
                               <img src="images/littlecaesars.jpg"
-                                   alt="Little Caesars website iphone responsive image clip"
-                                   class="pizza">
-                        </figure>
+                                   alt="Little Caesars website iphone responsive image clip">
+                        </picture>
                         <p>Little Caesars has <b>visual hierarchy</b> down. This website uses a deep orange background,
                               their signature color, to draw the eye first to the large black bold price, then to the
                               white title, and finally to the mouthwatering food picture.</p>
                   </div>
 
-                  <div class="grid-item grid-item-1">
+                  <div class="grid-item">
                         <h3 class="grid-header">Proximity
                         </h3>
                         <h4>
                               <b>Pizza Hut</b>
                               <br>
-                              <a class="link"
-                                 href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
+                              <a href="https://www.pizzahut.com/"><b>https://www.pizzahut.com/</b></a>
                         </h4>
-                        <figure class="figure">
+                        <picture>
                               <img src="images/pizzahut.jpg"
-                                   alt="Pizza Hut website iphone responsive image clip"
-                                   class="pizza">
-                        </figure>
+                                   alt="Pizza Hut website iphone responsive image clip">
+                        </picture>
                         <p>Pizza Hut uses <b>proximity</b> to section content, such as grouping together featured items
                               versus popular pizza selections.</p>
                   </div>
             </div>
 
       </main>
-      <footer class="footer">
+      <footer>
             &copy; <span id="copyrightyear"></span> | Barbara Chamberlin | Oklahoma | <a class="byu-link"
                href="https://www.byui.edu/online"> BYU-I Learning </a>
             <p>Last Updated: <span id="lastupdated"></span></p>
